# linewatch

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  linewatch.toml
.github/workflows/: ci.yaml
src/: cli.rs  config.rs  main.rs
src/core/: chain.rs  classify.rs  dossier.rs  events.rs  mod.rs  render_md.rs  types.rs
src/shell/: chart.rs  metrics.rs  mod.rs  otlp.rs  probe.rs  render_pdf.rs  run.rs  store.rs  temp.rs  trace.rs
