[package]
name = "linewatch"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.32"
hex = "0.4.3"
hickory-resolver = "0.26.1"
opentelemetry = { version = "0.32.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.32.0", features = ["http-proto", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.32.1", features = ["metrics"] }
prometheus = { version = "0.14.0", features = ["process"] }
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
socket2 = "0.6.4"
surge-ping = "0.9.0"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["serde", "formatting", "macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
toml = "1.1.2"
